--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -3,7 +3,7 @@
         {name: 'Bảng Điều Khiển', icon: 'fa-tachometer-alt', link: `${systemConfig.prefixAdmin}/dashboard`},
         // {name: 'Sản Phẩm', icon: 'fas fa-shopping-cart', link: `${systemConfig.prefixAdmin}/products`},
         // {name: 'Danh Mục', icon: 'fa-window-restore', link: `${systemConfig.prefixAdmin}/categories`},
-        {name: 'Thuộc Tính', icon: 'fas fa-tags', link: `${systemConfig.prefixAdmin}/attributes`},
+        // {name: 'Thuộc Tính', icon: 'fas fa-tags', link: `${systemConfig.prefixAdmin}/attributes`},
         // {name: 'Bài Viết', icon: 'fa-newspaper', link: `${systemConfig.prefixAdmin}/articles`},
         {name: 'Sliders', icon: 'fa-images', link: `${systemConfig.prefixAdmin}/sliders`},
         {name: 'Menu', icon: 'fas fa-bars', link: `${systemConfig.prefixAdmin}/menu`},
