--- a/app/vviews/admin/pages/settings/form.ejs
+++ b/app/vviews/admin/pages/settings/form.ejs
@@ -161,8 +161,8 @@ const folderUpload 	= `uploads/${collection}/`;
 					<input name="image_footer_uploaded" value="" type="hidden" id="image_footer_uploaded" />
 
 					<input type="hidden" name="name" value="">
-					<button type="submit" class="btn btn-sm btn-success mr-1"> Submit</button>
-					<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Cancel</a>
+					<button type="submit" class="btn btn-sm btn-success mr-1"> Lưu</button>
+					<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Trở Lại</a>
 				</div>
 			</div>
 		</form>
