--- a/app/vviews/ecommerce/pages/blogArticle/index.ejs
+++ b/app/vviews/ecommerce/pages/blogArticle/index.ejs
@@ -28,7 +28,7 @@ const folderProductUpload='uploads/products/';
                              <!-- <a class="article_featured-image" href="#"><img class="blur-up lazyload" data-src="<%= folderUpload + itemBlog.thumbnail %>" src="<%= folderUpload + itemBlog.thumbnail %>" alt="It's all about how you wear"></a>  -->
                             <h1><a href="/chi-tiet-bai-viet/<%= itemBlog.id %>"><%= itemBlog.title %> </a></h1>
                             <ul class="publish-detail">                      
-                                <li><i class="anm anm-user-al" aria-hidden="true"></i>  User</li>
+                                <li><i class="anm anm-user-al" aria-hidden="true"></i>  Admin</li>
                                 <!-- <li>
                                     <ul class="inline-list">   
                                         <li><i class="icon anm anm-comments-l"></i> <a href="#"> 0 comments</a></li>
@@ -114,7 +114,7 @@ const folderProductUpload='uploads/products/';
                             </div>
                         </div>
                         <div class="sidebar_widget">
-                        	<div class="widget-title"><h2>Recent Posts</h2></div>
+                        	<div class="widget-title"><h2>Bài Viết Liên Quan</h2></div>
 							<div class="widget-content">
                                 <div class="list list-sidebar-products">
                                   <div class="grid">
