--- a/app/vviews/ecommerce/pages/contact/index.ejs
+++ b/app/vviews/ecommerce/pages/contact/index.ejs
@@ -57,7 +57,7 @@
                       </div>
                       <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12 submitButton">
-                            <input type="submit" class="btn" value="Send Message">
+                            <input type="submit" class="btn" value="Gửi">
                         </div>
                      </div>
                      </form>
