--- a/app/vviews/ecommerce/pages/listBlog/index.ejs
+++ b/app/vviews/ecommerce/pages/listBlog/index.ejs
@@ -28,7 +28,7 @@ const folderProductUpload='uploads/products/';
                                <a class="article_featured-image" href="/chi-tiet-bai-viet/<%= items.id %>"><img class="blur-up lazyload" data-src="<%= folderUpload + items.thumbnail %>" src="<%= folderUpload + items.thumbnail %> alt="It's all about how you wear"></a> 
                               <h2 class="h3"><a href="/chi-tiet-bai-viet/<%= items.id %>"><%= items.title %> </a></h2>
                               <ul class="publish-detail">                      
-                                  <li><i class="anm anm-user-al" aria-hidden="true"></i>  User</li>
+                                  <li><i class="anm anm-user-al" aria-hidden="true"></i>  Admin</li>
                                   <!-- <li><i class="icon anm anm-clock-r"></i> <time datetime="2017-05-02">May 02, 2017</time></li> -->
                               </ul>
                               <div class="rte"> 
