--- a/app/vviews/ecommerce/pages/search/index.ejs
+++ b/app/vviews/ecommerce/pages/search/index.ejs
@@ -232,7 +232,7 @@
                 <hr>
                 <div class="productList">
                     <!--Toolbar-->
-                    <button type="button" class="btn btn-filter d-block d-md-none d-lg-none"> Product Filters</button>
+                    <button type="button" class="btn btn-filter d-block d-md-none d-lg-none"> Lọc Sản Phẩm</button>
                     <div class="toolbar">
                         <div class="filters-toolbar-wrapper">
                             <div class="row">
