--- a/app/vviews/admin/pages/blogArticle/form.ejs
+++ b/app/vviews/admin/pages/blogArticle/form.ejs
@@ -12,7 +12,7 @@
 		<div class="card-body">
 		
 			<div class="form-group row">
-				<label for="title" class="col-sm-2 col-form-label text-sm-right required">Title</label>
+				<label for="title" class="col-sm-2 col-form-label text-sm-right required">Tiêu Đề</label>
 				<div class="col-xs-12 col-sm-8">
 					<input type="text" name="title" value="<%= item.title %>" class="form-control form-control-sm <%= errors.title && 'is-invalid' %>" onKeyUp="handleSlug(
 						'<%= linkPrefix %>',
@@ -31,7 +31,7 @@
 			</div>
 
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Category</label>
+				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Danh Mục</label>
 				<div class="col-xs-12 col-sm-8">
 						<%- selectBlogCategory(listBlogCategory,item.categoriesId,'',errors.categoriesId) %>
 					</select>
@@ -39,7 +39,7 @@
 			</div>
 
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Ordering</label>
+				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Thứ Tự</label>
 				<div class="col-xs-12 col-sm-8">
 					<input type="text" name="ordering" value="<%= item.ordering ?? 0 %>" class="form-control form-control-sm <%= errors.ordering && 'is-invalid' %>">
 					<%- `<span class="error invalid-feedback">${errors.ordering}</span>` %>
@@ -48,7 +48,7 @@
 
 			<!-- Avatar -->
 			<div class="form-group row">
-				<label for="thumbnail" class="col-sm-2 col-form-label text-sm-right required">Thumbnail</label>
+				<label for="thumbnail" class="col-sm-2 col-form-label text-sm-right required">Hình Ảnh</label>
 				<div class="col-xs-12 col-sm-8">
 					<div class="custom-file">
 						<input id="imgInp" class="form-control custom-file-input <%= errors.thumbnail && 'is-invalid' %>" type="file" name="thumbnail">
@@ -67,10 +67,10 @@
 			
 
 			<div class="form-group row">
-				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Status</label>
+				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Trạng Thái</label>
 				<div class="col-xs-12 col-sm-8">
 					<select id="form[status]" name="status" class="custom-select custom-select-sm <%= errors.status && 'is-invalid' %>">
-						<option value="novalue">Choose Status</option>
+						<option value="novalue">Chọn Trạng Thái</option>
 						<option value="active" <%= (item.status == "active") ? 'selected="selected"' : '' %> >Active</option>
 						<option value="inactive" <%= (item.status == "inactive") ? 'selected="selected"' : '' %> >Inactive</option>
 					</select>
@@ -98,8 +98,8 @@
 				<input class="form-control" name="id" value="<%= item.id %>" type="hidden" >
 				<input name="image_old" value="<%= item.thumbnail %>" type="hidden"  />
 				<input name="image_uploaded" value="" type="hidden" id="image_uploaded"  />
-				<button type="submit" class="btn btn-sm btn-success mr-1"> Submit</button>
-				<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Cancel</a>
+				<button type="submit" class="btn btn-sm btn-success mr-1"> Lưu</button>
+				<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Trở Lại</a>
 			</div>
 		</div>
 	</form>
