--- a/app/vviews/admin/pages/blogCategory/form.ejs
+++ b/app/vviews/admin/pages/blogCategory/form.ejs
@@ -11,7 +11,7 @@
 		<div class="card-body">
 		
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Name</label>
+				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Tên</label>
 				<div class="col-xs-12 col-sm-8">
 					<input type="text" name="name" value="<%= item.name %>" class="form-control form-control-sm <%= errors.name && 'is-invalid' %>" onKeyUp="handleSlug(
 						'<%= linkPrefix %>',
@@ -30,7 +30,7 @@
 			</div>
 
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Parent Category</label>
+				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Cấp Danh Mục</label>
 				<div class="col-xs-12 col-sm-8">
 						<%- selectBlogCategory(listBlogCategory,item.parentId,'form',errors.parentId,null,null,'parentId') %>
 					</select>
@@ -38,7 +38,7 @@
 			</div>
 
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Ordering</label>
+				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Thứ Tự</label>
 				<div class="col-xs-12 col-sm-8">
 					<input type="text" name="ordering" value="<%= item.ordering %>" class="form-control form-control-sm <%= errors.ordering && 'is-invalid' %>">
 					<%- `<span class="error invalid-feedback">${errors.ordering}</span>` %>
@@ -46,10 +46,10 @@
 			</div>
 
 			<div class="form-group row">
-				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Status</label>
+				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Trạng Thái</label>
 				<div class="col-xs-12 col-sm-8">
 					<select id="form[status]" name="status" class="custom-select custom-select-sm <%= errors.status && 'is-invalid' %>">
-						<option value="novalue">Choose Status</option>
+						<option value="novalue">Chọn Trạng Thái</option>
 						<option value="active" <%= (item.status == "active") ? 'selected="selected"' : '' %> >Active</option>
 						<option value="inactive" <%= (item.status == "inactive") ? 'selected="selected"' : '' %> >Inactive</option>
 					</select>
@@ -63,8 +63,8 @@
 				<input class="form-control" name="id" value="<%= item.id %>" type="hidden" >
 				<input name="image_old" value="<%= item.avatar %>" type="hidden"  />
 				<input name="image_uploaded" value="" type="hidden" id="image_uploaded"  />
-				<button type="submit" class="btn btn-sm btn-success mr-1"> Submit</button>
-				<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Cancel</a>
+				<button type="submit" class="btn btn-sm btn-success mr-1"> Lưu</button>
+				<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Trở Lại</a>
 			</div>
 		</div>
 	</form>
