--- a/app/vviews/admin/pages/dashboard/index.ejs
+++ b/app/vviews/admin/pages/dashboard/index.ejs
@@ -60,7 +60,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header border-transparent">
-                    <h3 class="card-title">Đơn Hàng Mới Nhất</h3>
+                    <h3 class="card-title">Đơn Hàng</h3>
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse">
                             <i class="fas fa-minus"></i>
@@ -124,7 +124,7 @@
                 
                 <div class="card-body p-0" style="display: block;">
                 <ul class="users-list clearfix">
-                    <% userModel.forEach((items)=> { %>
+                    <% userModel.slice(0,4).forEach((items)=> { %>
                         <li>
                             <img src="/uploads/users/<%= items.avatar%>"onerror="this.onerror=null; this.src='https://vyshnevyi-partners.com/wp-content/uploads/2016/12/no-avatar.png'"/>
                             <!-- <img src="/uploads/users/<%= items.avatar%>"  alt="<%= items.username %>"> -->
