--- a/app/vviews/admin/pages/sliders/form.ejs
+++ b/app/vviews/admin/pages/sliders/form.ejs
@@ -11,7 +11,7 @@
 		<div class="card-body">
 		
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Name</label>
+				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Tên</label>
 				<div class="col-xs-12 col-sm-8">
 					<input type="text" name="name" value="<%= item.name %>" class="form-control form-control-sm <%= errors.name && 'is-invalid' %>" onKeyUp="handleSlug(
 						'<%= linkPrefix %>',
@@ -30,7 +30,7 @@
 			</div>
 
 			<div class="form-group row">
-				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Ordering</label>
+				<label for="name" class="col-sm-2 col-form-label text-sm-right required">Thứ Tự</label>
 				<div class="col-xs-12 col-sm-8">
 					<input type="text" name="ordering" value="<%= item.ordering %>" class="form-control form-control-sm <%= errors.ordering && 'is-invalid' %>">
 					<%- `<span class="error invalid-feedback">${errors.ordering}</span>` %>
@@ -39,7 +39,7 @@
 
 			<!-- Avatar -->
 			<div class="form-group row">
-				<label for="avatar" class="col-sm-2 col-form-label text-sm-right required">Avatar</label>
+				<label for="avatar" class="col-sm-2 col-form-label text-sm-right required">Hình Ảnh</label>
 				<div class="col-xs-12 col-sm-8">
 					<div class="custom-file">
 						<input id="imgInp" class="form-control custom-file-input <%= errors.avatar && 'is-invalid' %>" type="file" name="avatar">
@@ -58,10 +58,10 @@
 			
 
 			<div class="form-group row">
-				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Status</label>
+				<label for="status" class="col-sm-2 col-form-label text-sm-right required">Trạng Thái</label>
 				<div class="col-xs-12 col-sm-8">
 					<select id="form[status]" name="status" class="custom-select custom-select-sm <%= errors.status && 'is-invalid' %>">
-						<option value="novalue">Choose Status</option>
+						<option value="novalue">Chọn Trạng Thái</option>
 						<option value="active" <%= (item.status == "active") ? 'selected="selected"' : '' %> >Active</option>
 						<option value="inactive" <%= (item.status == "inactive") ? 'selected="selected"' : '' %> >Inactive</option>
 					</select>
@@ -70,7 +70,7 @@
 			</div>
 
 			<div class="form-group row">
-				<label for="description" class="col-sm-2 col-form-label text-sm-right required">Description</label>
+				<label for="description" class="col-sm-2 col-form-label text-sm-right required">Mô Tả</label>
 				<div class="col-xs-12 col-sm-8">
 					<textarea id="editor" name="description"><%= item.description %></textarea>
 					<!-- <span class="error invalid-feedback">undefined</span> -->
@@ -83,8 +83,8 @@
 				<input class="form-control" name="id" value="<%= item.id %>" type="hidden" >
 				<input name="image_old" value="<%= item.avatar %>" type="hidden"  />
 				<input name="image_uploaded" value="" type="hidden" id="image_uploaded"  />
-				<button type="submit" class="btn btn-sm btn-success mr-1"> Submit</button>
-				<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Cancel</a>
+				<button type="submit" class="btn btn-sm btn-success mr-1"> Lưu</button>
+				<a href="<%= linkPrefix %>" class="btn btn-sm btn-danger mr-1"> Trở Lại</a>
 			</div>
 		</div>
 	</form>
