--- a/app/vviews/ecommerce/elements/banner.ejs
+++ b/app/vviews/ecommerce/elements/banner.ejs
@@ -5,11 +5,11 @@
 <!--Parallax Section-->
         <div class="section">
             <div class="hero hero--large hero__overlay bg-size">
-            	<img class="bg-img" src="frontend/assets/images/parallax-banners/parallax-banner.jpg" alt="" />
+            	<img class="bg-img" src="<%= folderUpload + listSliders[2].avatar %>" alt="" />
                 <div class="hero__inner">
                     <div class="container">
                         <div class="wrap-text left text-small font-bold">
-                            <h2 class="h2 mega-title">Belle <br> Sự Lựa Chọn Hoàn Hảo Cho Bạn</h2>
+                            <h2 class="h2 mega-title">Belle <br> <%- listSliders[2].description %></h2>
                             <!-- <div class="rte-setting mega-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</div> -->
                             <a href="/tat-ca-san-pham" class="btn">MUA NGAY</a>
                         </div>
