--- a/app/vviews/ecommerce/pages/cart/index.ejs
+++ b/app/vviews/ecommerce/pages/cart/index.ejs
@@ -57,7 +57,7 @@
                                     <div class="row">
                                         <div class="form-group col-md-12 col-lg-12 col-xl-12 required">
                                             <label for="input-email">E-Mail <span class="required-f">*</span></label>
-                                            <input name="email" id="input-email" disabled type="email" value="">
+                                            <input name="email" id="input-email" disabled type="email" value="<%= userInfo.email %> ">
                                         </div>
                                         <div class="form-group col-md-12 col-lg-12 col-xl-12 required">
                                             <label for="input-address-1">Địa Chỉ <span class="required-f">*</span></label>
